--- a/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
@@ -3,19 +3,21 @@
     <h1 class="text-center my-3">Entrar</h1>
 
     <div class="form-group">
-      <label for="usuario">Usuário</label>
+      <label for="usuario">Nick</label>
       <input
+        [(ngModel)]='usuarioLogin.nick'
         type="text"
         class="form-control"
         name="usuario"
         id="usuario"
-        placeholder="Seu usuário"
+        placeholder="Digite seu email"
       />
     </div>
 
     <div class="form-group">
       <label for="senha">Senha</label>
       <input
+        [(ngModel)]='usuarioLogin.senha'
         type="password"
         class="form-control"
         name="senha"
@@ -25,7 +27,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <button type="button" class="btn btn-outline-dark mt-1" style="border-radius: 20px;">
+      <button type="button" (click)="entrar()" class="btn btn-outline-dark mt-1" style="border-radius: 20px;">
         Logar
       </button>
     </div>
