thw way that news goes..

--- a/FrontEnd/ApoiaTurismo/src/app/app.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/app.component.html
@@ -1,1 +1,4 @@
+<app-menu *ngIf="entrarOuCadastrar()"></app-menu>
+<app-categorias *ngIf="entrarOuCadastrar()"></app-categorias>
 <router-outlet></router-outlet>
+<app-rodape *ngIf="entrarOuCadastrar()"></app-rodape>
