--- a/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
@@ -1,7 +1,6 @@
 <div class="row">
-  <div class="col-12 px-0 mx-0 categorias-bg fluid">
-    <hr>
-      <ul class="d-flex justify-content-between">
+  <div class="col-md-12 px-0 mx-0 bg-warning fluid">
+      <ul class="d-flex justify-content-between mt-2 mb-0">
 
         <li class="list-unstyled">
           <div class="justify-content-center">
