--- a/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
@@ -10,7 +10,7 @@
         class="form-control"
         name="usuario"
         id="usuario"
-        placeholder="Digite seu email"
+        placeholder="Digite seu usuário"
       />
     </div>
 
