--- a/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
@@ -24,6 +24,30 @@
 
   </div>
 
+  <hr>
+<!--cards de todos os produtos-->
+
+  <div class="card-columns">
+
+    <div *ngFor="let item of listaProdutos" class="card mb-3" style="max-width: 540px; max-height: 250px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="{{item.fotoUrl}}" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <p class="card-text">{{item.descricaoProduto}}</p>
+            <h5 class="card-title text-bold">R${{item.preco}}</h5>
+            <p class="card-text"><small class="text-muted">Publicado por: {{item.usuario.nick}}</small></p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
 </div>
 
 
