--- a/FrontEnd/ApoiaTurismo/src/app/menu/menu.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/menu/menu.component.html
@@ -31,11 +31,13 @@
     </a>
     <div *ngIf="logado()" class="mx-3">
       <a routerLink="/meusanuncios" class="btn btn-warning mr-3">meus anuncios</a>
-      <img src="{{foto}}" alt="" width="40px" height="40px" class="mr-3 img-fluid rounded-circle">
-      <strong>{{nick}}</strong>
-      <a (click)="sair()">
-        <i class="fa fa-sign-out ml-2" aria-hidden="true"></i>
-      </a>
+        <a [routerLink]="['/user-edit',id]">
+          <img src="{{foto}}" alt="" width="40px" height="40px" class="mr-3 img-fluid rounded-circle">
+          <strong>{{nick}}</strong>
+        </a>
+        <a (click)="sair()">
+          <i class="fa fa-sign-out ml-2" aria-hidden="true"></i>
+        </a>
     </div>
   <!--  <button type="button" class="btn btn-warning">Anunciar</button> -->
   </div>
