--- a/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
@@ -4,7 +4,7 @@
 
         <li class="list-unstyled">
           <div class="justify-content-center">
-            <a href="/categorias/moveis" style="text-decoration: none;">
+            <a [routerLink]="['/categoria', 1]" style="text-decoration: none;">
               <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
                 <i class="fa fa-bed" aria-hidden="true"></i>
               </div>
@@ -16,7 +16,7 @@
 
         <li class="list-unstyled">
           <div class="justify-content-center">
-            <a href="/categorias/moveis" style="text-decoration: none;">
+            <a [routerLink]="['/categoria', 2]" style="text-decoration: none;">
               <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
                 <i class="fa fa-bell-o" aria-hidden="true"></i>
               </div>
@@ -28,7 +28,7 @@
 
         <li class="list-unstyled">
           <div class="justify-content-center">
-            <a href="/categorias/moveis" style="text-decoration: none;">
+            <a [routerLink]="['/categoria', 3]" style="text-decoration: none;">
               <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
                 <i class="fa fa-reply-all" aria-hidden="true"></i>
               </div>
@@ -40,7 +40,7 @@
 
         <li class="list-unstyled">
           <div class="justify-content-center">
-            <a href="/categorias/moveis" style="text-decoration: none;">
+            <a [routerLink]="['/categoria', 4]" style="text-decoration: none;">
               <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
                 <i class="fa fa-unlock-alt" aria-hidden="true"></i>
               </div>
@@ -52,7 +52,7 @@
 
         <li class="list-unstyled">
           <div class="justify-content-center">
-            <a href="/categorias/moveis" style="text-decoration: none;">
+            <a routerLink="/todascategorias" style="text-decoration: none;">
               <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
                 <i class="fa fa-align-justify" aria-hidden="true"></i>
               </div>
