btn quem somos + arrumando algumas coisas

--- a/FrontEnd/ApoiaTurismo/src/app/app.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-menu *ngIf="entrarOuCadastrar()"></app-menu>
 <app-categorias *ngIf="entrarOuCadastrar()"></app-categorias>
 <router-outlet></router-outlet>
+<app-sobrenos *ngIf="entrarOuCadastrar()"></app-sobrenos>
 <app-rodape *ngIf="entrarOuCadastrar()"></app-rodape>
+<app-contato *ngIf="entrarOuCadastrar()"></app-contato>
