--- a/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
@@ -1,67 +1,71 @@
-<div class="row">
-  <div class="col-md-12 px-0 mx-0 bg-warning fluid">
-      <ul class="d-flex justify-content-between mt-2 mb-0">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12 px-0 mx-0 bg-warning fluid">
+        <ul class="d-flex justify-content-between mt-2 mb-0">
 
-        <li class="list-unstyled">
-          <div class="justify-content-center">
-            <a [routerLink]="['/categoria', 1]" style="text-decoration: none;">
-              <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
-                <i class="fa fa-bed" aria-hidden="true"></i>
-              </div>
-            </a>
-            <p>Móveis</p>
-          </div>
-        </li>
-
-
-        <li class="list-unstyled">
-          <div class="justify-content-center">
-            <a [routerLink]="['/categoria', 2]" style="text-decoration: none;">
-              <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
-                <i class="fa fa-bell-o" aria-hidden="true"></i>
-              </div>
-            </a>
-            <p>Brinquedos</p>
-          </div>
-        </li>
+          <li class="list-unstyled">
+            <div class="justify-content-center">
+              <a [routerLink]="['/categoria', 1]" style="text-decoration: none;">
+                <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
+                  <img src="../../assets/img/furnitures.png" alt="" height="30px">
+                  <!--<i class="fa fa-bed" aria-hidden="true"></i>-->
+                </div>
+              </a>
+              <p>Móveis</p>
+            </div>
+          </li>
 
 
-        <li class="list-unstyled">
-          <div class="justify-content-center">
-            <a [routerLink]="['/categoria', 3]" style="text-decoration: none;">
-              <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
-                <i class="fa fa-reply-all" aria-hidden="true"></i>
-              </div>
-            </a>
-            <p>Roupas</p>
-          </div>
-        </li>
+          <li class="list-unstyled">
+            <div class="justify-content-center">
+              <a [routerLink]="['/categoria', 2]" style="text-decoration: none;">
+                <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
+                  <img src="../../assets/img/toys.png" alt="" height="30px">
+                </div>
+              </a>
+              <p>Brinquedos</p>
+            </div>
+          </li>
 
 
-        <li class="list-unstyled">
-          <div class="justify-content-center">
-            <a [routerLink]="['/categoria', 4]" style="text-decoration: none;">
-              <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
-                <i class="fa fa-unlock-alt" aria-hidden="true"></i>
-              </div>
-            </a>
-            <p>Instrumentos</p>
-          </div>
-        </li>
+          <li class="list-unstyled">
+            <div class="justify-content-center">
+              <a [routerLink]="['/categoria', 3]" style="text-decoration: none;">
+                <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
+                  <img src="../../assets/img/clothes-hanger.png" alt="" height="30px">
+                </div>
+              </a>
+              <p>Roupas</p>
+            </div>
+          </li>
 
 
-        <li class="list-unstyled">
-          <div class="justify-content-center">
-            <a routerLink="/todascategorias" style="text-decoration: none;">
-              <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
-                <i class="fa fa-align-justify" aria-hidden="true"></i>
-              </div>
-            </a>
-            <p>Todos</p>
-          </div>
-        </li>
+          <li class="list-unstyled">
+            <div class="justify-content-center">
+              <a [routerLink]="['/categoria', 4]" style="text-decoration: none;">
+                <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
+                  <img src="../../assets/img/music-instrument.png" alt="" height="30px">
+                </div>
+              </a>
+              <p>Instrumentos</p>
+            </div>
+          </li>
 
-      </ul>
+
+          <li class="list-unstyled">
+            <div class="justify-content-center">
+              <a routerLink="/todascategorias" style="text-decoration: none;">
+                <div class="rounded-circle bg-light d-flex justify-content-center align-items-center m-auto" style="height: 50px; width: 50px;">
+                  <img src="../../assets/img/grid.png" alt="" height="30px">
+                </div>
+              </a>
+              <p>Todos</p>
+            </div>
+          </li>
+
+        </ul>
+    </div>
   </div>
 </div>
+
 
