--- a/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
@@ -27,17 +27,19 @@
   <hr>
 <!--cards de todos os produtos-->
 
-  <div class="card-columns">
+<h1 class="text-center mb-5">Todos os anuncios</h1>
+
+    <div class="card-columns">
 
     <div *ngFor="let item of listaProdutos" class="card mb-3" style="max-width: 600px; max-height: 250px;">
       <div class="row no-gutters">
         <div class="col-md-4 align-items-center">
-          <img src="{{item.fotoUrl}}" class="card-img" alt="..." style="object-fit: cover; width: 220px; height: 250px;">
+          <img src="{{item.fotoUrl}}" class="card-img" alt="..." style="object-fit: cover; width: 220px; height: 248px;">
         </div>
         <div class="col-md-8">
           <div class="card-body ml-2">
-            <h5 class="card-title">{{item.titulo}}</h5>
-            <p class="card-text">{{item.descricaoProduto}}</p>
+            <h5 class="card-title">{{(item.titulo.length>34)? (item.titulo | slice:0:32) + '..':(item.titulo)}}</h5>
+            <p class="card-text">{{(item.descricaoProduto.length>80)? (item.descricaoProduto | slice:0:80) + '..': (item.descricaoProduto)}}</p>
             <h5 class="card-title text-bold">R${{item.preco}}</h5>
             <p class="card-text"><small class="text-muted">Publicado por: {{item.usuario.nick}}</small></p>
             <a href="#" class="btn btn-primary">Comprar</a><a href="#" class="btn btn-success"><i class="fa fa-shopping-cart"></i></a>
