--- a/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.css
+++ b/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.css
@@ -5,6 +5,8 @@
 
 #carta:hover{
 
- transform: scale(1.1);
+  transition: 200ms;
+  transform: scale(1.1);
+  filter: drop-shadow(0px 0px 10px rgba(50, 50, 93, 0.25));
 
 }
