--- a/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" id='quemsomos'>
   <div class="container">
     <h1 class="display-4">Olá, nós somos o ApoiaTurismo!</h1>
     <p class="lead">O apoia turismo é um projeto de e-commerce feito na GenerationBrasil<br><br>
