--- a/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/sobrenos/sobrenos.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid" id='quemsomos'>
+<div class="jumbotron jumbotron-fluid bg-light" id='quemsomos'>
   <div class="container">
     <h1 class="display-4">Olá, nós somos o ApoiaTurismo!</h1>
     <p class="lead">O apoia turismo é um projeto de e-commerce feito na GenerationBrasil<br><br>
@@ -12,7 +12,7 @@
     <div class="d-flex justify-content-between flex-wrap">
       <!--Gustavo-->
       <div id="carta">
-        <div class="card bg-light m-3" style="max-width: 18rem; min-width: 300px;">
+        <div class="card m-3" style="max-width: 18rem; min-width: 300px;">
           <div class="card-header d-flex justify-content-center">
             <strong>
               Gustavo Sousa Martins
