--- a/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/categorias/categorias.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid text-dark" id='barraCategorias'>
   <div class="row">
     <div class="col-md-12 px-0 mx-0 bg-warning fluid">
         <ul class="d-flex justify-content-between mt-2 mb-0">
