--- a/FrontEnd/ApoiaTurismo/src/app/pesquisa/pesquisa.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/pesquisa/pesquisa.component.html
@@ -11,7 +11,7 @@
 
   <div class="card-columns">
 
-    <div *ngFor="let item of listaProdutos" class="card mb-3" style="max-width: 600px; max-height: 250px;">
+    <div *ngFor="let item of listaProdutos" class="card mb-3" style="max-width: 600px; max-height: 250px; min-width: 600px; min-height: 250px;">
       <div class="row no-gutters">
         <div class="col-md-4 align-items-center">
           <img src="{{item.fotoUrl}}" class="card-img" alt="..." style="object-fit: cover; width: 220px; height: 248px;">
