--- a/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
@@ -8,7 +8,7 @@
           <h1 class="fs-42" id='h1AP'>Olá, nos somos o Apoia Turismo!</h1>
           <h5 class="fs-18" id='h5AP'>o e-commerce de produtos artesanais</h5>
           <!--Botao do modal-->
-          <h5 *ngIf="logado()" class="fs-18">
+          <h5 id='h5AP2' *ngIf="logado()" class="fs-18">
             Qual produto voce quer
             <button type="button" class="btn btn-warning" data-toggle='modal' data-target='#novaPostagem'>Anunciar</button>
             ?
