--- a/FrontEnd/ApoiaTurismo/src/app/menu/menu.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/menu/menu.component.html
@@ -42,7 +42,7 @@
         Entrar</button>
     </a>
     <div *ngIf="logado()" class="mx-3">
-      <a routerLink="/meusanuncios" class="btn btn-warning mr-3">meus anuncios</a>
+      <a routerLink="/meusanuncios" class="btn btn-warning mr-3">meus anúncios</a>
         <a [routerLink]="['/user-edit',id]"  style="text-decoration: none; color: white;">
           <img src="{{foto}}" alt="" width="40px" height="40px" class="mr-3 img-fluid rounded-circle">
           <strong>{{nick}}</strong>
