--- a/FrontEnd/ApoiaTurismo/src/app/contato/contato.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/contato/contato.component.html
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid d-flex justify-content-center">
   <form>
     <div class="form-row">
+      <h1>Quer nos dar um feedback?</h1>
       <div class="form-group col-md-6">
         <label for="inputEmail4">Email</label>
         <input type="email" class="form-control" id="inputEmail4" placeholder="Seu email">
@@ -24,8 +25,7 @@
     </div>
     <button type="submit" class="btn btn-primary" style="border-radius: 20px;">Enviar</button>
   </form>
-  <iframe id="_atssh509" title="AddThis utility frame" style="height: 1px; width: 1px; position: absolute; top: 0px; z-index: 100000; border: 0px; left: 0px;" src="https://s7.addthis.com/static/sh.f48a1a04fe8dbf021b4cda1d.html#rand=0.7348018727473435&amp;iit=1639857334159&amp;tmr=load%3D1639857334046%26core%3D1639857334080%26main%3D1639857334156%26ifr%3D1639857334161&amp;cb=0&amp;cdn=0&amp;md=0&amp;kw=&amp;ab=-&amp;dh=artesol.org.br&amp;dr=https%3A%2F%2Fartesol.org.br%2F&amp;du=https%3A%2F%2Fartesol.org.br%2Frede%3Fperfil%3D4&amp;href=https%3A%2F%2Fartesol.org.br%2Frede&amp;dt=Artesol&amp;dbg=0&amp;cap=tc%3D0%26ab%3D0&amp;inst=1&amp;jsl=129&amp;prod=undefined&amp;lng=pt&amp;ogt=description%2Csite_name%2Cimage%2Curl%2Ctype%3Dwebsite%2Ctitle&amp;pc=men&amp;pub=ra-59e6c19b9e5c33c4&amp;ssl=1&amp;sid=61be3cb64ff95a34&amp;srf=0.01&amp;ver=300&amp;xck=0&amp;xtr=0&amp;og=title%3DArtesol%26type%3Dwebsite%26url%3Dhttp%253A%252F%252Fartesol.org.br%252Frede%253Fperfil%253D4%26image%3D%252Fhome%252Fstorage%252F0%252F63%252F3f%252Fartesol%252Fpublic_html%252Fapp%252Fwebroot%252Fimg%252Fheader%252Fbrand.png%26site_name%3DArtesol%26description%3D&amp;csi=undefined&amp;rev=v8.28.8-wp&amp;ct=1&amp;xld=1&amp;xd=1"></iframe>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkct6TdALh0VKmkNeg3_PemZrD3sIkmEA&amp;v=3.30&amp;libraries=places&amp;language=pt&amp;region=BR&amp;callback=vueGoogleMapsInit" async="" defer=""></script>
+  <img src="../../assets/img/Online world-pana.png" class="ml-5" alt="" height="500px">
 </div>
 
 
