retirando a animacao pq tava dando problema

--- a/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/inicio/inicio.component.html
@@ -5,8 +5,8 @@
     <div class="col-md-6 my-5">
       <div class="row d-flex justify-content-center align-items-center flex-column">
 
-          <h1 class="fs-42" id='h1AP'>Olá, nós somos o Apoia Turismo!</h1>
-          <h5 class="fs-18" id='h5AP'>o e-commerce de produtos artesanais</h5>
+          <h1 class="fs-42">Olá, nós somos o Apoia Turismo!</h1>
+          <h5 class="fs-18">o e-commerce de produtos artesanais</h5>
           <!--Botao do modal-->
           <h5 id='h5AP2' *ngIf="logado()" class="fs-18">
             Qual produto voce quer
