arrumando padding zoado

--- a/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
+++ b/FrontEnd/ApoiaTurismo/src/app/entrar/entrar.component.html
@@ -1,5 +1,6 @@
 <div id="teste" style="height: 100vh;">
   <div class="conteiner p-5" id="teste2">
+    <button class="btn btn-outline-dark mt-1" routerLink="/inicio">Voltar</button>
     <h1 class="text-center my-3">Entrar</h1>
 
     <div class="form-group">
